--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 ADMIN_ID=admin123
 ADMIN_PASS=12345
+
+MONGO_URI=mongodb+srv://sibiraj_db:JByR728D4zdRe9X5@cluster0.pwhndgt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=3500
